
* initial.sp failure reported in weird situation: 
  see mgcv-related/bugs/initial.sp

* users can use as.factor(a) in formula, and variable.summary won't know 
  about it - causes a problem if a is character, for example. Could coerce
  character to factor, but is that general enough? what about if a was numeric
  then summary doesn't reflect how it's used?  

* F needed in gam object?

1.7-23

** 'ti' smooth spefification introduced, which provides a much better (and 
  very simple) way of allowing nested models based on 'te' type tensor 
  product smooths. 'ti' terms are used to set up smooth interactions 
  excluding main effects (so ti(x,z) is like x:z while te(x,z) is more
  like x*z, although the analogy is not exact). 

* gamm could fail with fixed smooths while assembling total 
  penalty matrix, by attempting to access non-existent penalty 
  matrix. (Thanks Ainars Aunins for reporting this.)

* stripped rownames from model matrix, eta, linear predictor etc. Saves
  memory and time.

* plot.soap.film could switch axis ranges. Fixed.

* plot.mgcv.smooth now sets smooth plot range on basis of xlim and 
  ylim if present.

* formXtViX documentation fixed + return matrix labels.

* fixDependence related negative index failures for completely confounded 
  terms - now fixed.

* sos smooth model matrix re-scaled for better conditioning.

* sos plot method could produce NaNs by a rounding error in argument to 
  acos - fixed. 

1.7-22

* Predict.matrix.pspline.smooth now allows prediction outside range of knots, 
  and uses linear extrapolation in this case.

* missing drop=FALSE in reTest called by summary.gam caused 1-D random effect
  p-value computation to fail. Fixed (thanks Silje Skår).

1.7-21

** soap film smoother class added. See ?soap

* Polish translation added thanks to Lukasz Daniel.

* mgcv/po/R-mgcv.pot up-dated.

* plot methods for smooths modified slightly to allow methods to return 
  plot data directly, without a prediction matrix.

1.7-20
