@@ -28,6 +28,8 @@ R_CMethodDef CEntries[] = {
     {"get_stableS",(DL_FUNC)&get_stableS,14},
     {"mgcv_tri_diag",(DL_FUNC)&mgcv_tri_diag,3},
     {"mgcv_td_qy",(DL_FUNC)&mgcv_td_qy,7},
+    {"mgcv_symeig",(DL_FUNC)&mgcv_symeig,6},
+    {"read_mat",(DL_FUNC)&read_mat,4},
     {"rwMatrix",(DL_FUNC)&rwMatrix,6},
     {"in_out",(DL_FUNC)&in_out,8},
     {"Rlanczos",(DL_FUNC)&Rlanczos,7},
