@@ -4,12 +4,55 @@
 */
 #include "mgcv.h"
 #include <stdlib.h>
+#include <stdio.h>
 #include <math.h>
 #include <R.h>
 #include <R_ext/Linpack.h> /* only needed for pivoted chol - see note in mgcv_chol */
 #include <R_ext/Lapack.h>
 #include <R_ext/BLAS.h>
 /*#include <dmalloc.h>*/
+
+
+
+void dump_mat(double *M,int *r,int*c,const char *path) {
+  /* dump r by c matrix M to path - intended for debugging use only */
+  FILE *mf;
+  mf = fopen(path,"wb");
+  if (mf == NULL) { 
+    Rprintf("\nFailed to open file\n");
+    return;
+  }
+  fwrite(r,sizeof(int),1,mf); fwrite(c,sizeof(int),1,mf);
+  fwrite(M,sizeof(double),*r * *c,mf);
+  fclose(mf);
+}
+
+void read_mat(double *M,int *r,int*c,char *path) {
+/* routine to facilitate reading dumped matrices back into R - debugging use only
+   
+   e.g. (actually path doesn't work here)
+   oo <- .C("read_mat",as.double(0),r=as.integer(0),c=as.integer(0),
+             as.character("/home/sw283/tmp/badmat.dat"),PACKAGE="mgcv")
+   oo <- .C("read_mat",M=as.double(rep(0,oo$c*oo$r)),r=as.integer(oo$r),c=as.integer(oo$c),
+             as.character("/home/sw283/tmp/badmat.dat"),PACKAGE="mgcv")
+   M <- matrix(oo$M,oo$r,oo$c)
+*/
+ int j;
+ FILE *mf;
+ mf = fopen("/home/sw283/tmp/badmat.dat","rb"); 
+ if (mf == NULL) { 
+    Rprintf("\nFailed to open file\n");
+    return;
+ }
+ if (*r < 1) { /* dimension query */
+   j=fread(r,sizeof(int),1,mf); j=fread(c,sizeof(int),1,mf);
+ } else {
+   j=fread(r,sizeof(int),1,mf); j=fread(c,sizeof(int),1,mf);
+   j=fread(M,sizeof(double),*r * *c,mf);
+ }
+ fclose(mf);
+}
+
 
 void mgcv_mmult0(double *A,double *B,double *C,int *bt,int *ct,int *r,int *c,int *n)
 /* This code doesn't rely on the BLAS...
@@ -640,24 +683,35 @@ void mgcv_symeig(double *A,double *ev,int *n,int *use_dsyevd,int *get_vectors,
    either dsyevd (slower, robust) or dsyevr (faster, seems less robust). 
    Vectors returned in columns of A, values in ev (ascending).
    
+   Note: R 2.15.2 upgraded to a patched version of LAPACK 
+         3.4.1 which seems to have broken uplo='U' - non-orthogonal 
+         eigen-vectors are possible with that option.
+
    ******************************************************
    *** Eigenvalues are returned  in *ascending* order ***
    *** unless descending is set to be non-zero        ***
    ******************************************************
 
    Testing R code....
-   library(mgcv)
-   n<-4;A<-matrix(rnorm(n*n),n,n);A<-A%*%t(A);d<-array(0,n)
+   library(mgcv);m <- 34
+   n<-46;A<-matrix(rnorm(n*m),n,m);A<-A%*%t(A);
    er<-eigen(A)
-   um<-.C("mgcv_symeig",as.double(A),as.double(d),as.integer(n),
-           as.integer(1),as.integer(1),PACKAGE="mgcv")
-   er$vectors;matrix(um[[1]],n,n)
+   d<-array(0,ncol(A));n <- ncol(A)
+   um<-.C("mgcv_symeig",as.double(A),as.double(d),as.integer(ncol(A)),
+           as.integer(0),as.integer(1),as.integer(1),PACKAGE="mgcv")
+   U <- matrix(um[[1]],n,n)
+   er$vectors;U
    er$values;um[[2]]
 */  
 
-{ char jobz='V',uplo='U',range='A'; 
-  double work1,*work,dum1=0,abstol=0.0,*Z,*dum2,x,*p;
-  int lwork = -1,liwork = -1,iwork1,info,*iwork,dumi=0,n_eval=0,*isupZ,i;
+{ char jobz='V',uplo='L',range='A'; 
+  double work1,*work,dum1=0,abstol=0.0,*Z,*dum2,x,*p,*p1,*p2,*Acopy;
+  int lwork = -1,liwork = -1,iwork1,info,*iwork,dumi=0,n_eval=0,*isupZ,i,j,k,debug=0;
+  if (debug && *get_vectors) { /* need a copy to dump in case of trouble */
+    Acopy = (double *)calloc((size_t)*n * *n,sizeof(double));
+    for (p2=Acopy,p=A,p1=A+ *n * *n;p<p1;p++,p2++) *p2 = *p;
+  }
+
   if (*get_vectors) jobz='V'; else jobz='N';
   if (*use_dsyevd)
   { F77_CALL(dsyevd)(&jobz,&uplo,n,A,n,ev,&work1,&lwork,&iwork1,&liwork,&info);
@@ -666,13 +720,21 @@ void mgcv_symeig(double *A,double *ev,int *n,int *use_dsyevd,int *get_vectors,
     liwork = iwork1;iwork= (int *)calloc((size_t)liwork,sizeof(int));
     F77_CALL(dsyevd)(&jobz,&uplo,n,A,n,ev,work,&lwork,iwork,&liwork,&info);
     free(work);free(iwork);
+    if (*descending) for (i=0;i<*n/2;i++) {
+        /* work in from left and right swapping cols */
+	p = A + i * *n; /* start of left col */ 
+        p1 = A + *n * (*n - 1 - i); /* start of right col */
+        for (p2 = p + *n;p<p2;p++,p1++) { /* do the swap */
+          x = *p;*p=*p1;*p1=x;
+        }
+    }
   } else
   { Z=(double *)calloc((size_t)(*n * *n),sizeof(double)); /* eigen-vector storage */
     isupZ=(int *)calloc((size_t)(2 * *n),sizeof(int)); /* eigen-vector support */
     F77_CALL(dsyevr)(&jobz,&range,&uplo,
 		   n,A,n,&dum1,&dum1,&dumi,&dumi,
 		   &abstol,&n_eval,ev, 
-    		     Z,n,isupZ, &work1,&lwork,&iwork1,&liwork,&info);
+    		   Z,n,isupZ, &work1,&lwork,&iwork1,&liwork,&info);
     lwork=(int)floor(work1);if (work1-lwork>0.5) lwork++;
     work=(double *)calloc((size_t)lwork,sizeof(double));
     liwork = iwork1;iwork= (int *)calloc((size_t)liwork,sizeof(int));
@@ -682,12 +744,13 @@ void mgcv_symeig(double *A,double *ev,int *n,int *use_dsyevd,int *get_vectors,
     		     Z,n,isupZ, work,&lwork,iwork,&liwork,&info);
     free(work);free(iwork);
     
-    if (*descending) for (i=0;i<*n/2;i++) { /* reverse the eigenvalues */
+    /* if (*descending) for (i=0;i<*n/2;i++) { 
       x = ev[i]; ev[i] = ev[*n-i-1];ev[*n-i-1] = x;
-    }
+      } - now below*/
 
     if (*get_vectors) {  /* copy vectors back into A */
-      if (*descending) { /* need to reverse order */
+     p1 = A; 
+     if (*descending) { /* need to reverse order */
         dum2 = Z + *n * (*n-1);
         for (work=dum2;work>=Z;work -= *n)
 	  for (p=work;p<work + *n;p++,A++) *A = *p; 
@@ -696,10 +759,32 @@ void mgcv_symeig(double *A,double *ev,int *n,int *use_dsyevd,int *get_vectors,
         for (work=Z;work<dum2;work++,A++) *A = *work;
       }
     }
+    A = p1;
     free(Z);free(isupZ);
   }
+  if (*descending) for (i=0;i<*n/2;i++) { /* reverse the eigenvalues */
+       x = ev[i]; ev[i] = ev[*n-i-1];ev[*n-i-1] = x;
+  }
+  if (debug && *get_vectors) { /* are the eigenvectors really orthogonal?? */
+    p = (double *)calloc((size_t)*n * *n,sizeof(double));
+    getXtX(p,A,n,n); /* cross prod of eigenvec matrix - should be I */
+    x=0.0;k=0;
+    for (i=0;i<*n;i++) for (j=0;j<i;j++)  if (fabs(p[i + *n * j])>1e-14) { 
+	  x += fabs(p[i + *n * j]);k++;  
+    }
+    Rprintf("**\n");
+    j=k;
+    if (k) Rprintf("Non orthogonal eigenvectors %d %g\n",k,x/k);
+    x=0.0;k=0;
+    for (i=0;i<*n;i++) if (fabs(p[i + *n * i]-1)>1e-14) { 
+	x += fabs(p[i + *n * i]-1);k++;
+    }
+    if (k) Rprintf("Eigenvectors not normalized %d %g\n",k,x/k);
+    if (k+j>0) dump_mat(Acopy,n,n,"/home/sw283/tmp/badmat.dat");
+    free(p);free(Acopy);
+  }
 
- }
+}
 
 void mgcv_trisymeig(double *d,double *g,double *v,int *n,int getvec,int descending) 
 /* Find eigen-values and vectors of n by n symmetric tridiagonal matrix 
